// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`banking reconciliator should correctly reconciliate when accounts exist 1`] = `
Array [
  "Bank account 1",
  "Bank account 1 - Titres",
  "Debit 200",
  "Debit 100",
]
`;

exports[`banking reconciliator should pass stack transactions belonging to reconciliated accounts to BankTransaction::reconciliate 1`] = `
Array [
  "Bank account 1",
  "Debit 100",
  "Debit 400",
]
`;
